--- a/angular-cinema-project/cinema/src/app/movie-list/movie-list.component.scss
+++ b/angular-cinema-project/cinema/src/app/movie-list/movie-list.component.scss
@@ -1,1 +1,11 @@
-.table-section {}
+@use 'mixin';
+
+/* th {
+   @include cinema-background-style;
+}
+
+#get-button {
+    @include cinema-background-style
+} */
+tr:nth-child(even) {background:rgb(170, 170, 170)}
+
