--- a/angular-cinema-project/cinema/src/app/movie-details/movie-details.component.html
+++ b/angular-cinema-project/cinema/src/app/movie-details/movie-details.component.html
@@ -1,3 +1,11 @@
 <section class="detail-section">
+<div class="card">
+    <img src="" alt="">
+    <h3>
 
+    </h3>
+    <p>
+        
+    </p>
+</div>
 </section>
