--- a/angular-cinema-project/cinema/src/app/movie-list/movie-list.component.html
+++ b/angular-cinema-project/cinema/src/app/movie-list/movie-list.component.html
@@ -1,6 +1,9 @@
-<section class="table-section">
-    <button id="get-button">Get movie List</button>
-    <table>
+<section class="table-section my-5">
+  
+    <button (click)="getMovies()" id="get-button">Get movie List</button>
+  
+  
+    <table class="table">
         <thead>
           <tr>
             <th>Title</th>
@@ -10,7 +13,15 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="table-row"></tr>
+          <tr class="table-row" *ngFor="let movie of movies$ | async">
+            <td>{{ movie.title }}</td>
+            <td>{{ movie.year }}</td>
+            <td>{{ movie.category }}</td>
+            <td>
+                <button (click)="deleteMovie(movie.id)" id="delete-button" class="btn btn-danger">Delete</button>
+            </td>
+          </tr>
         </tbody>
     </table>
+  
 </section>
